@@ -10,14 +10,12 @@ import org.springframework.context.*;
 import org.springframework.context.annotation.*;
 import org.springframework.stereotype.*;
 
-import com.google.common.collect.*;
-
 @Component
 @Profile("!dev")
 public class RuntimeInfoContributor implements InfoContributor {
 
 	@Override public void contribute(Info.Builder builder) {
-		builder.withDetail("runtime", ImmutableMap.of(
+		builder.withDetail("runtime", Map.of(
 			"jvm.version", Optional.ofNullable(getVersion(Runtime.class)).orElse(ManagementFactory.getRuntimeMXBean().getVmVersion()), // First for JDK 1.8, second for JDK 9
 			"spring-boot.version", getVersion(SpringApplication.class),
 			"spring.version", getVersion(ApplicationContext.class),
