@@ -1,10 +1,10 @@
 package org.strangeforest.tcb.stats.visitors;
 
+import java.util.*;
+
 import org.springframework.beans.factory.annotation.*;
 import org.springframework.boot.actuate.info.*;
 import org.springframework.stereotype.*;
-
-import com.google.common.collect.*;
 
 import static org.strangeforest.tcb.stats.visitors.VisitorInterval.*;
 import static org.strangeforest.tcb.stats.visitors.VisitorStat.*;
@@ -15,7 +15,7 @@ public class VisitorsInfoContributor implements InfoContributor {
 	@Autowired private VisitorRepository repository;
 
 	@Override public void contribute(Info.Builder builder) {
-		builder.withDetail("visitors", ImmutableMap.of(
+		builder.withDetail("visitors", Map.of(
 			"active", repository.getVisitors(ACTIVE_VISITORS, HOUR, false),
 			"lastDayVisits", repository.getVisitors(VISITS, DAY, false),
 			"lastDayHits", repository.getVisitors(HITS, DAY, false),
